clusters/talos-robbinsdale/apps/media/app/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "Prowlarr"
    item.homer.rajsingh.info/subtitle: "Indexer Management"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/Prowlarr/Prowlarr/develop/Logo/256.png"
    item.homer.rajsingh.info/keywords: "indexer, torrent, usenet"

    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "prowlarr.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prowlarr
          port: 9696
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
